fix: add overflow config

--- a/assets/css/_partial/_single/_katex.scss
+++ b/assets/css/_partial/_single/_katex.scss
@@ -1,3 +1,12 @@
 .katex-display {
-    overflow-x: scroll;
+    overflow: auto hidden;
+}
+.katex-display > .katex {
+    white-space: normal;
+}
+.katex-display > .base {
+    margin: 0.25em 0;
+}
+.katex-display {
+    margin: 0.5em 0;
 }
